Scenarios/ASA-Secure-Baseline/Bicep/02-Hub-Network/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2018-05-01/subscriptionDeploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.13.1.58284",
      "templateHash": "2430101505289687101"
    }
  },
  "parameters": {
    "azureBastionSubnetSpace": {
      "type": "string",
      "metadata": {
        "description": "Azure Bastion Subnet Address Space"
      }
    },
    "hubVnetAddressSpace": {
      "type": "string",
      "metadata": {
        "description": "Hub VNET Prefix"
      }
    },
    "location": {
      "type": "string",
      "metadata": {
        "description": "The Azure Region in which to deploy the Spring Apps Landing Zone Accelerator"
      }
    },
    "namePrefix": {
      "type": "string",
      "metadata": {
        "description": "The common prefix used when naming resources"
      }
    },
    "springAppsSubnetSpace": {
      "type": "string",
      "metadata": {
        "description": "Spring Apps Subnet Address Space"
      }
    },
    "tags": {
      "type": "object",
      "defaultValue": {}
    },
    "timeStamp": {
      "type": "string",
      "defaultValue": "[utcNow('yyyyMMddHHmm')]",
      "metadata": {
        "description": "Timestamp value used to group and uniquely identify a given deployment"
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/resourceGroups",
      "apiVersion": "2022-09-01",
      "name": "[format('{0}-network-hub-rg', parameters('namePrefix'))]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]"
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-10-01",
      "name": "[format('{0}-{1}-vnet-hub', parameters('timeStamp'), parameters('namePrefix'))]",
      "resourceGroup": "[format('{0}-network-hub-rg', parameters('namePrefix'))]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "vnetName": {
            "value": "[format('{0}-vnet-hub', parameters('namePrefix'))]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "addressSpaces": {
            "value": [
              "[parameters('hubVnetAddressSpace')]"
            ]
          },
          "subnets": {
            "value": [
              {
                "name": "AzureBastionSubnet",
                "properties": {
                  "addressPrefix": "[parameters('azureBastionSubnetSpace')]",
                  "networkSecurityGroup": {
                    "id": "[reference(extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', subscription().subscriptionId, format('{0}-network-hub-rg', parameters('namePrefix'))), 'Microsoft.Resources/deployments', format('{0}-{1}-nsg-bastion', parameters('timeStamp'), parameters('namePrefix'))), '2020-10-01').outputs.id.value]"
                  }
                }
              },
              {
                "name": "spring-apps",
                "properties": {
                  "addressPrefix": "[parameters('springAppsSubnetSpace')]",
                  "networkSecurityGroup": {
                    "id": "[reference(extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', subscription().subscriptionId, format('{0}-network-hub-rg', parameters('namePrefix'))), 'Microsoft.Resources/deployments', format('{0}-{1}-nsg-bastion', parameters('timeStamp'), parameters('namePrefix'))), '2020-10-01').outputs.id.value]"
                  }
                }
              }
            ]
          },
          "tags": {
            "value": "[parameters('tags')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.13.1.58284",
              "templateHash": "125503056750794255"
            }
          },
          "parameters": {
            "addressSpaces": {
              "type": "array"
            },
            "location": {
              "type": "string"
            },
            "subnets": {
              "type": "array"
            },
            "tags": {
              "type": "object"
            },
            "vnetName": {
              "type": "string"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2020-06-01",
              "name": "[parameters('vnetName')]",
              "location": "[parameters('location')]",
              "properties": {
                "addressSpace": {
                  "addressPrefixes": "[parameters('addressSpaces')]"
                },
                "subnets": "[parameters('subnets')]"
              },
              "tags": "[parameters('tags')]"
            }
          ],
          "outputs": {
            "name": {
              "type": "string",
              "value": "[parameters('vnetName')]"
            },
            "id": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            }
          }
        }
      },
      "dependsOn": [
        "[extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', subscription().subscriptionId, format('{0}-network-hub-rg', parameters('namePrefix'))), 'Microsoft.Resources/deployments', format('{0}-{1}-nsg-bastion', parameters('timeStamp'), parameters('namePrefix')))]",
        "[subscriptionResourceId('Microsoft.Resources/resourceGroups', format('{0}-network-hub-rg', parameters('namePrefix')))]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-10-01",
      "name": "[format('{0}-{1}-nsg-bastion', parameters('timeStamp'), parameters('namePrefix'))]",
      "resourceGroup": "[format('{0}-network-hub-rg', parameters('namePrefix'))]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "name": {
            "value": "[format('{0}-nsg-bastion', parameters('namePrefix'))]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "securityRules": {
            "value": [
              {
                "name": "AllowHTTPSInbound",
                "properties": {
                  "priority": 100,
                  "direction": "Inbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "Internet",
                  "destinationAddressPrefix": "*"
                }
              },
              {
                "name": "AllowGatewayManagerInbound",
                "properties": {
                  "priority": 200,
                  "direction": "Inbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "GatewayManager",
                  "destinationAddressPrefix": "*"
                }
              },
              {
                "name": "AllowAzureLBInbound",
                "properties": {
                  "priority": 300,
                  "direction": "Inbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "AzureLoadBlanacer",
                  "destinationAddressPrefix": "*"
                }
              },
              {
                "name": "AllowBastionHostCommunication",
                "properties": {
                  "priority": 400,
                  "direction": "Inbound",
                  "access": "Allow",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": [
                    "5701",
                    "8080"
                  ],
                  "sourceAddressPrefix": "VirtualNetwork",
                  "destinationAddressPrefix": "VirtualNetwork"
                }
              },
              {
                "name": "AllowRdpSshOutbound",
                "properties": {
                  "priority": 100,
                  "direction": "Outbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": [
                    "22",
                    "3389"
                  ],
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "VirtualNetwork"
                }
              },
              {
                "name": "AllowBastionHostCommunicationOutbound",
                "properties": {
                  "priority": 110,
                  "direction": "Outbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": [
                    "5701",
                    "8080"
                  ],
                  "sourceAddressPrefix": "VirtualNetwork",
                  "destinationAddressPrefix": "VirtualNetwork"
                }
              },
              {
                "name": "AllowAzureCloudOutbound",
                "properties": {
                  "priority": 120,
                  "direction": "Outbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "AzureCloud"
                }
              },
              {
                "name": "AllowGetSessionInformation",
                "properties": {
                  "priority": 130,
                  "direction": "Outbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "80",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "Internet"
                }
              }
            ]
          },
          "tags": {
            "value": "[parameters('tags')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.13.1.58284",
              "templateHash": "7408650034896617376"
            }
          },
          "parameters": {
            "location": {
              "type": "string"
            },
            "name": {
              "type": "string"
            },
            "securityRules": {
              "type": "array"
            },
            "tags": {
              "type": "object"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2020-06-01",
              "name": "[parameters('name')]",
              "location": "[parameters('location')]",
              "properties": {
                "securityRules": "[parameters('securityRules')]"
              },
              "tags": "[parameters('tags')]"
            }
          ],
          "outputs": {
            "id": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('name'))]"
            },
            "nsgName": {
              "type": "string",
              "value": "[parameters('name')]"
            }
          }
        }
      },
      "dependsOn": [
        "[subscriptionResourceId('Microsoft.Resources/resourceGroups', format('{0}-network-hub-rg', parameters('namePrefix')))]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-10-01",
      "name": "[format('{0}-{1}-nsg-spring-apps', parameters('timeStamp'), parameters('namePrefix'))]",
      "resourceGroup": "[format('{0}-network-hub-rg', parameters('namePrefix'))]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "name": {
            "value": "[format('{0}-nsg-spring-apps', parameters('namePrefix'))]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "securityRules": {
            "value": [
              {
                "name": "AllowHTTPSInbound",
                "properties": {
                  "priority": 100,
                  "direction": "Inbound",
                  "access": "Allow",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "Internet",
                  "destinationAddressPrefix": "*"
                }
              }
            ]
          },
          "tags": {
            "value": "[parameters('tags')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.13.1.58284",
              "templateHash": "7408650034896617376"
            }
          },
          "parameters": {
            "location": {
              "type": "string"
            },
            "name": {
              "type": "string"
            },
            "securityRules": {
              "type": "array"
            },
            "tags": {
              "type": "object"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2020-06-01",
              "name": "[parameters('name')]",
              "location": "[parameters('location')]",
              "properties": {
                "securityRules": "[parameters('securityRules')]"
              },
              "tags": "[parameters('tags')]"
            }
          ],
          "outputs": {
            "id": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('name'))]"
            },
            "nsgName": {
              "type": "string",
              "value": "[parameters('name')]"
            }
          }
        }
      },
      "dependsOn": [
        "[subscriptionResourceId('Microsoft.Resources/resourceGroups', format('{0}-network-hub-rg', parameters('namePrefix')))]"
      ]
    }
  ]
}
